Regression: Edit mode weights panel shows incorrect values #111273
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#111273
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.19.0-46-generic-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.54.03
Blender Version
Broken: version: 3.6.2, caused by
cd74ba6413
Short description of error
Edit mode weights panel incorrectly shows the last weight in all the entries.
Exact steps for others to reproduce the error
EditModeWeights.blend
The groups are named according to the weight value they hold.
You can also clearly see by the color that the active group holds a value of 1 in all vertices.
However the weights panel shows 0.25 for all groups
Edit mode weights panel shows incorrect valuesto Regression: Edit mode weights panel shows incorrect valuesI can confirm.
Caused by
cd74ba6413
@JacquesLucke ^
Poke, @JacquesLucke , bug was in 3.6/
Can Blender devs please fix this for Blender 3.6 lts? Blender 4 alpha isn't opening on my Pc (hopefully the stable version will work for me). So I might have to keep using 3.6. Lts.
I've added the commit to the list of fixes to backport to LTS
I can confirm. The normalize button isn't working. Auto-normalize setting on the brushes isn't working. Normalize and Normalize all in the Weights menu, also not working.
Are there any updates when this will be fixed? As this is a nightmare when trying to adjust clothing clipping when you cant manually edit single vertices for small adjustments...
@Niclas-Tachilzik, can you confirm the version you are testing?
If I'm not mistaken, this problem should already be fixed in 3.6.3 or any of the latest development snapshot of blender: https://builder.blender.org/download
@mano-wii I use Blender via Steam as it usually auto updates, but it does not have an update at the moment. Currently its still 3.6.2 there. Does it take some extra time to upload the new version to steam?
Sadly 3.6.3 hasn't been released.
My advice would be to get 3.6.1 for now