Fix #111273: multiple vertex weight sliders show the same value (backport to 3.6)

The main annoying thing here is that this file is in C++ in `main` but still in C in 3.6.

Pull Request: https://projects.blender.org/blender/blender/pulls/112015