source/blender/editors/space_view3d/view3d_buttons.c
@@ -98,7 +98,7 @@ typedef struct {
   float ob_dims_orig[3];
   float ob_scale_orig[3];
   float ob_dims[3];
-  float active_vertex_weight;
+  float *vertex_weights;
   /* Floats only (treated as an array). */
   TransformMedian ve_median, median;
   bool tag_for_update;
@@ -274,11 +274,19 @@ static void apply_scale_factor_clamp(float *val,
   }
 }
 
+static void v3d_transform_props_free(void *properties_storage)
+{
+  TransformProperties *tfp = properties_storage;
+  MEM_SAFE_FREE(tfp->vertex_weights);
+  MEM_freeN(tfp);
+}
+
 static TransformProperties *v3d_transform_props_ensure(View3D *v3d)
 {
   if (v3d->runtime.properties_storage == NULL) {
     v3d->runtime.properties_storage = MEM_callocN(sizeof(TransformProperties),
                                                   "TransformProperties");
+    v3d->runtime.properties_storage_free = v3d_transform_props_free;
   }
   return v3d->runtime.properties_storage;
 }
@@ -1320,7 +1328,7 @@ static void update_active_vertex_weight(struct bContext *C, void *arg1, void *UN
   MDeformVert *dv = ED_mesh_active_dvert_get_only(ob);
   const int vertex_group_index = POINTER_AS_INT(arg1);
   MDeformWeight *dw = BKE_defvert_find_index(dv, vertex_group_index);
-  dw->weight = tfp->active_vertex_weight;
+  dw->weight = tfp->vertex_weights[vertex_group_index];
 }
 
 static void view3d_panel_vgroup(const bContext *C, Panel *panel)
@@ -1368,6 +1376,11 @@ static void view3d_panel_vgroup(const bContext *C, Panel *panel)
     vgroup_validmap = BKE_object_defgroup_subset_from_select_type(
         ob, subset_type, &vgroup_tot, &subset_count);
     const ListBase *defbase = BKE_object_defgroup_list(ob);
+    MEM_SAFE_FREE(tfp->vertex_weights);
+    const int vgroup_num = BLI_listbase_count(defbase);
+    if (vgroup_num > 0) {
+      tfp->vertex_weights = MEM_calloc_arrayN(vgroup_num, sizeof(float), __func__);
+    }
 
     for (i = 0, dg = defbase->first; dg; i++, dg = dg->next) {
       bool locked = (dg->flag & DG_LOCK_WEIGHT) != 0;
@@ -1405,7 +1418,8 @@ static void view3d_panel_vgroup(const bContext *C, Panel *panel)
 
           /* The weight group value */
           /* To be reworked still */
-          tfp->active_vertex_weight = dw->weight;
+          float *vertex_weight = &tfp->vertex_weights[i];
+          *vertex_weight = dw->weight;
           but = uiDefButF(block,
                           UI_BTYPE_NUM,
                           B_VGRP_PNL_EDIT_SINGLE + i,
@@ -1414,7 +1428,7 @@ static void view3d_panel_vgroup(const bContext *C, Panel *panel)
                           yco,
                           (x = UI_UNIT_X * 4),
                           UI_UNIT_Y,
-                          &tfp->active_vertex_weight,
+                          vertex_weight,
                           0.0,
                           1.0,
                           0,
